Changes from database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:mysql://localhost/floatsystem2?serverTimezone=America/Bogota&useSSL=true
+#Url base de datos
+spring.datasource.username=root
+#Usuario base de datos
+spring.datasource.password=7416
+#Contrasena base de datos
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#Controlador de MySql (llama la clase Driver)
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#Lenguaje a usar
+spring.jpa.hibernate.ddl-auto=create-drop
+#Se usa al levantar la API crea las tablas en contexto de las clases Entity creadas y una vez se apague la API se borran las tablas (NO USAR EN PRODUCCIoN, SOLO EN TESTEO)
+logging.level.org.hibernate.SQL=debug
+#Mostrar la consultas que se generan de forma nativa
 
+#TENER CUIDADO CON LOS ESPACIOS EN BLANCO AL FINAL DE CADA LiNEA
