New Application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #Controlador de MySql (llama la clase Driver)
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #Lenguaje a usar
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 #Se usa al levantar la API crea las tablas en contexto de las clases Entity creadas y una vez se apague la API se borran las tablas (NO USAR EN PRODUCCIoN, SOLO EN TESTEO)
 logging.level.org.hibernate.SQL=debug
 #Mostrar la consultas que se generan de forma nativa
